src/test/deca/codegen/invalid/logiques/while-bad-type.deca
// Description:
//    Comparaison entre un boolean et un entier dans une boucle
//
// Résultats:
//    Erreur de compilation: types incompatibles

{
   boolean tab;
   int i;
   tab = true;
   i = 0;
   while (tab == i) { 
      println(i);
      i = i + 1;
   }
}